--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,23 +10,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Unity Build
+    - name: Checkout 
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+        lfs: true
+    - name: Caching Library
+      uses: actions/cache@v2
+      with:
+        path: Library
+        key: Library-Workflow-WebGL
+        restore-keys: |
+          Library-Workflow-
+          Library-
+    - name: Building Project
       uses: game-ci/unity-builder@v2.0.3
       env:
-        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
         UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
         UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
       with:
         targetPlatform: WebGL
-    - name: Save Build
+    - name: Saving Build
       uses: actions/upload-artifact@v2
       with:
         name: Build
         path: build
-    - uses: actions/cache@v2
-      with:
-        path: Library
-        key: Library-Workflow-TargetPlatform
-        restore-keys: |
-          Library-Workflow-
-          Library-
+
