--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
         UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
       with:
         targetPlatform: WebGL
+        unityVersion: "2021.1.24f1"
     - name: Saving Build
       uses: actions/upload-artifact@v2
       with:
